venue-catalog/ops/k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: venue-catalog
spec:
  ingressClassName: nginx
  rules:
    - host: api.venue-catalog.nafuralabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: venue-catalog-backend
                port:
                  number: 8085
    - host: catalog.nafuralabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: venue-catalog-web
                port:
                  number: 80
